--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ clap = { version = "4.0.13", features = ["derive"] }
 env_logger = "0.9.1"
 indicatif = "0.17.1"
 log = "0.4.17"
+libs = { path = "libs" }
