--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,6 @@
-[package]
-name = "grrs"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-anyhow = "1.0.65"
-clap = { version = "4.0.13", features = ["derive"] }
-env_logger = "0.9.1"
-indicatif = "0.17.1"
-log = "0.4.17"
-libs = { path = "libs" }
-assert_cmd = "2.0.4"
-predicates = "2.1.1"
+members = [
+    "grr_app",
+    "matchers",
+]
